# alfred

./: .gitignore  package.xml  setup.cfg  setup.py
alfred/: body.py  brain.py  ear.py  robot_controller.py  shared_consts.py  test_alfred.py  test_brain.py
launch/: alfred.launch.py
test_moveit_config/: .setup_assistant  package.xml
test_moveit_config/config/: M3Pro.ros2_control.xacro  M3Pro.srdf  joint_limits.yaml  ros2_controllers.yaml
